tests/e2e/path_names_internal.error
Error: syntax error in story at line 1, column 5

1|    a = __b
          ^^^

E0058: Path names can't start with double underscore
